# kavach

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  benchmarks-rust-v-cyrius.md  cyrius.toml  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
benches/: BENCHMARK_HISTORY.md  bench-history.csv  sandbox.rs
docs/adr/: 001-cyrius-port-architecture.md  002-backend-dispatch-fnptr-table.md  003-fixed-point-threat-scoring.md  004-deferred-features.md  005-v2-hardening-pass.md  README.md
docs/architecture/: overview.md
docs/development/: roadmap.md  rust-old-removal.md  stiva.md
docs/examples/: 01-hello-noop.md  02-process-with-audit.md  03-scanner-verdicts.md  04-offender-tracking.md  README.md
docs/guides/: README.md  composite-backends.md  getting-started.md  threat-tracking.md
lib/: sigil.cyr
rust-old/: Cargo.toml  Makefile
rust-old/benches/: bench-history.csv
rust-old/src/: bridge.rs  error.rs  lib.rs  sandbox_core.rs
rust-old/src/backend/: attestation.rs  capabilities.rs  composite.rs  metrics.rs  oci_spec.rs
rust-old/src/backend/firecracker/: config.rs  network.rs  snapshot.rs  vsock.rs
rust-old/src/backend/oci/: mod.rs
rust-old/src/backend/process/: cgroups.rs  landlock_enforce.rs  mod.rs
rust-old/src/backend/sgx/: mod.rs
rust-old/src/backend/sy_agnos/: mod.rs
rust-old/src/credential/: http_proxy.rs
rust-old/src/lifecycle/: mod.rs
rust-old/src/runtime/: mod.rs  monitor.rs
rust-old/src/scanning/: data.rs  gate.rs  quarantine.rs
rust-old/src/scoring/: mod.rs
rust-old/src/tests/: mod.rs
rust-old/supply-chain/: config.toml
scripts/: bench-history.sh  version-bump.sh
src/: attestation.cyr  audit.cyr  backend.cyr  backend_dispatch.cyr  backend_firecracker.cyr  backend_gvisor.cyr  backend_noop.cyr  backend_oci.cyr  backend_process.cyr  backend_sev.cyr  backend_sgx.cyr  backend_sy_agnos.cyr  backend_tdx.cyr  backend_wasm.cyr  composite.cyr  credential.cyr  error.cyr  error.rs  events.rs  firewall.rs  lib.rs  lifecycle.cyr  main.cyr  main.rs  observability.cyr  oci_spec.cyr  policy.cyr  quarantine.cyr  sandbox_backends.rs  sandbox_core.rs  sandbox_exec.cyr  scanning_code.cyr  scanning_data.cyr  scanning_gate.cyr  scanning_runtime.cyr  scanning_secrets.cyr  scanning_threat.cyr  scanning_types.cyr  scoring.cyr  seccomp_profiles.rs  (+1 more)
src/backend/: attestation.rs  capabilities.rs  composite.rs  exec_util.rs  gpu.rs  health.rs  metrics.rs  mod.rs  oci_spec.rs  runtime_attestation.rs
src/backend/firecracker/: config.rs  mod.rs  network.rs  vsock.rs
src/backend/gvisor/: mod.rs
src/backend/oci/: mod.rs
src/backend/process/: cgroups.rs  landlock_enforce.rs  mod.rs  namespaces.rs  seccomp.rs
src/backend/sev/: mod.rs
src/backend/sgx/: mod.rs
src/backend/sy_agnos/: mod.rs
src/backend/wasm/: mod.rs
src/credential/: http_proxy.rs  mod.rs
src/lifecycle/: mod.rs
src/policy/: mod.rs
src/runtime/: credential_proxy.rs  egress_gate.rs  monitor.rs  v2.rs  wasm_runtime.rs
src/scanning/: audit.rs  code.rs  gate.rs  mod.rs  runtime.rs  secrets.rs  threat.rs  types.rs
src/scoring/: mod.rs
src/tests/: mod.rs
tests/: adversarial.rs  kavach.bcyr  kavach.fcyr  kavach.tcyr
