[package]
name = "kavach"
version = "2.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Sandbox execution framework — backend abstraction, strength scoring, policy engine, credential proxy, and audit hooks"
homepage = "https://github.com/MacCracken/kavach"
repository = "https://github.com/MacCracken/kavach"
readme = "README.md"
keywords = ["sandbox", "security", "isolation", "container", "wasm"]
categories = ["os", "web-programming"]

[features]
default = ["process"]
process = ["dep:seccompiler", "dep:landlock", "dep:nix", "dep:caps", "dep:regex"]
gvisor = ["dep:oci-spec", "dep:tempfile"]
firecracker = ["dep:tempfile"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
oci = ["dep:oci-spec", "dep:tempfile"]
sgx = ["dep:tempfile"]
sev = ["dep:tempfile"]
sy-agnos = ["dep:tempfile"]
sigstore = ["dep:sigstore"]
attestation = ["dep:ear"]
agnostik = ["dep:agnos-common", "dep:agnosys"]
nein = ["dep:nein", "agnostik"]
full = ["process", "gvisor", "firecracker", "wasm", "oci", "sgx", "sev", "sy-agnos"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "fs", "io-util", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

# Crypto — HMAC-SHA256 for audit chain
hmac = "0.13"
sha2 = "0.11"

# Process backend (Linux-only)
regex = { version = "1", optional = true }

# Image verification (optional)
sigstore = { version = "0.13", optional = true, default-features = false }

# Attestation standards (optional)
ear = { version = "0.5", optional = true }

# AGNOS shared types (optional — for sandbox_core bridge module)
agnos-common = { path = "../agnosticos/userland/agnos-common", optional = true }
agnosys = { path = "../agnosys", features = ["full"], optional = true }
nein = { path = "../nein", features = ["netns", "engine"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { version = "0.5", optional = true }
landlock = { version = "0.4", optional = true }
nix = { version = "0.31", features = ["sched", "process", "signal", "resource"], optional = true }
caps = { version = "0.5", optional = true }

# gVisor / OCI backends
oci-spec = { version = "0.9", optional = true }
tempfile = { version = "3", optional = true }

# WASM sandbox
wasmtime = { version = "43", optional = true }
wasmtime-wasi = { version = "43", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "sandbox"
harness = false
